# vumies

./: .npmrc  README.md  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
.agents/: orchestrator.md
.agents/sub-agents/: catalog-agent.md  infra-agent.md  player-agent.md  search-agent.md  ui-agent.md  user-agent.md
.atl/: .skill-registry.cache.json  skill-registry.md
api/: .gitignore  main.py  requirements.txt  tmdb_map.py
api/scrapers/: animeav1.py  svelte.py
scripts/: ensure-pnpm.cjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/mpv/: mpv.conf
src-tauri/mpv/script-opts/: uosc.conf
src-tauri/src/: lib.rs  mpv.rs  torrent.rs
src/core/: index.ts
src/core/config/: api.config.ts  features.ts
src/core/router/: index.ts
src/core/stores/: anime.store.ts  app.store.ts  index.ts  settings.store.ts
src/core/utils/: motion.ts
src/modules/catalog/: index.ts
src/modules/catalog/components/: AnimeCard.vue  MovieCard.vue  TVShowCard.vue
src/modules/catalog/composables/: useAnimeAV1.ts  useAnimes.ts  useMovies.ts  useSeries.ts
src/modules/catalog/services/: animeav1.service.ts  tmdb.service.ts
src/modules/catalog/types/: animeav1.types.ts  tmdb.types.ts
src/modules/catalog/views/: AnimeDetailView.vue  AnimeView.vue  AnimeWatchView.vue  (+5 more)
src/modules/player/: index.ts  torrent-engine.ts
src/modules/search/: index.ts
src/modules/ui/: index.ts
src/modules/user/: index.ts
temp/stitch/: home.html  player.html  profile.html
(+45 files in other folders)
